Configure control project with Docker and ArchUnit