@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.github.jmgoyesc'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '19'
+sourceCompatibility = JavaVersion.VERSION_19
 
 configurations {
 	compileOnly {
@@ -18,14 +18,54 @@ repositories {
 	mavenCentral()
 }
 
+ext {
+	set('testcontainersVersion', "1.17.6")
+}
+
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
+	// lombok annotations
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation "org.projectlombok:lombok"
+
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+	// validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// questdb postgres jdbc
+	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.questdb:questdb:6.6.1'
+	implementation 'com.zaxxer:HikariCP:5.0.1'
+
+	// apache commons
+	implementation 'org.apache.commons:commons-lang3:3.12.0'
+
+	// test
+	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'com.tngtech.archunit:archunit-junit5:1.0.1'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
+	}
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+	options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+	jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+	jvmArgs += '--enable-preview'
 }
